--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1"
   },
   "meteor": {
     "mainModule": {
